--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -39,15 +39,18 @@ googleAnalytics = "UA-XXXXXXX-Y"
         location = "New York"
 
         [[params.contact.list]]
-        icon = "fas fa-phone-square"
+        style = "fas"
+        icon = "fa-phone-square"
         url = "tel:#"
         text = "0123 4567 890"
         [[params.contact.list]]
-        icon = "fas fa-envelope-square"
+        style = "fas"
+        icon = "fa-envelope-square"
         url = "mailto:#"
         text = "simon.doe@yourwebsite.com"
         [[params.contact.list]]
-        icon = "fas fa-globe"
+        style = "fas"
+        icon = "fa-globe"
         url = "#"
         text = "www.yourwebsite.com"
 
@@ -291,15 +294,18 @@ googleAnalytics = "UA-XXXXXXX-Y"
         enable = true
 
         [[params.social.list]]
-        icon = "fab fa-github-square"
+        style = "fab"
+        icon = "fa-github-square"
         url = "//github.com/username"
         title = "username"
         [[params.social.list]]
-        icon = "fab fa-linkedin"
+        style = "fab"
+        icon = "fa-linkedin"
         url = "//linkedin.com/in/username"
         title = "username"
         [[params.social.list]]
-        icon = "fab fa-twitter-square"
+        style = "fab"
+        icon = "fa-twitter-square"
         url = "//twitter.com/username"
         title = "@username"
 
